--- a/views/join.pug
+++ b/views/join.pug
@@ -1,2 +1,10 @@
 extends layouts/main
-block content    
+block content
+    .formContainer
+        form(action=routes.join, method="post")
+            input(type="text", name="name", placeholder="full name")
+            input(type="email", name="email", placeholder="email")
+            input(type="password", name="password", placeholder="password")
+            input(type="password", name="password2", placeholder="verify password")
+            input(type="submit", value="join now")
+        include partials/socialLogin
