--- a/views/login.pug
+++ b/views/login.pug
@@ -1,2 +1,8 @@
 extends layouts/main
-block content    
+block content
+    .formContainer
+        form(action=routes.login, method="post")
+             input(type="email", name="email", placeholder="email")
+            input(type="password", name="password", placeholder="password")
+            input(type="submit", value="Log in")
+        include partials/socialLogin
