--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -3,6 +3,9 @@ header.header
         a(href=routes.home)
             i.fab.fa-youtube
     div.headerColumn
+        form(action=routes.search, method="get")
+            input(type="text", placeholder="Search now", name="term")
+    div.headerColumn
         ul
             li
                 a(href=routes.join) Join
