--- a/views/editVideo.pug
+++ b/views/editVideo.pug
@@ -1,2 +1,9 @@
 extends layouts/main
-block content    
+block content
+    .formContainer
+        form(action=`/videos${routes.editVideo}`, method="post")
+            input(type="text", placeholder="Title", name="title")
+            textarea(name="description", placeholder="Description")
+            input(type="submit", value="Upload video")
+        a.formContainerLink.formContainerLinkDelete(href=`/videos${routes.deleteVideo}`) Delete Video
+        
