--- a/views/upload.pug
+++ b/views/upload.pug
@@ -1,2 +1,9 @@
 extends layouts/main
-block content    
+block content
+    .formContainer
+        form(action=`/videos${routes.upload}`, method="post")
+            label(for="videoFile") Video File
+            input(type="file", id= "videoFile", name="videoFile")
+            input(type="text", placeholder="Title", name="title")
+            textarea(name="description", placeholder="Description")
+            input(type="submit", value="Upload video")
