--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -16,6 +16,6 @@ header.header
                 li
                     a(href=`/videos${routes.upload}`) Upload
                 li
-                    a(href=`/users${routes.userDetail(user.id)}`) Profile
+                    a(href=routes.userDetail(user.id)) Profile
                 li
                     a(href=routes.logout) Log out
