--- a/views/home.pug
+++ b/views/home.pug
@@ -4,10 +4,9 @@ include mixins/videoBlock
 block content    
     div.videos
         each item in videoFiles
-            //h1=video.title
             +videoBlock({
                 id: item.id,
-                videoFile:item.videoFile,
+                videoFile:item.fileUrl,
                 title:item.title,
                 views:item.views
             })
