--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -1,10 +1,12 @@
 extends layouts/main
 block content
-    .formContainer
+    .form-container
         form(action=`/users${routes.editProfile}`, method="post")
-            label(for="avatar") Avatar
-            input(type="file", id="avatar", name="avatar")
+            .fileUpload
+                label(for="avatar") Avatar
+                input(type="file", id="avatar", name="avatar")
             input(type="text", placeholder="name", name="name")
             input(type="email", placeholder="email", name="email")
             input(type="submit", value="Update Profile")
-        a.formContainerLink(href=`/users${routes.changePassword}`) Change Password
+        a.formContainerLink(href=`/users${routes.changePassword}`)
+            button Change Password
