--- a/views/join.pug
+++ b/views/join.pug
@@ -1,6 +1,6 @@
 extends layouts/main
 block content
-    .formContainer
+    .form-container
         form(action=routes.join, method="post")
             input(type="text", name="name", placeholder="full name", required=true)
             input(type="email", name="email", placeholder="email", required=true)
