--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,4 +1,4 @@
 footer.footer
-    div.footerIcon
+    div.footer_icon
         i.fab.fa-youtube
-    span.footerText &copy; #{new Date().getFullYear()} #{siteName}
+    span.footer_text &copy; #{new Date().getFullYear()} #{siteName}
