--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,11 @@
-@import "./config/_variables.scss";
-
-body {
-  // background-color: $bgColor;
-  background-color: $coolColor;
-}
+@import "config/_variables.scss";
+@import "config/reset.scss";
+@import "main.scss";
+@import "partials/header.scss";
+@import "pages/home.scss";
+@import "partials/footer.scss";
+@import "partials/form.scss";
+@import "partials/socialLogin.scss";
+@import "partials/videoBlock.scss";
+@import "pages/home.scss";
+@import "pages/videoDetail.scss";
