--- a/views/login.pug
+++ b/views/login.pug
@@ -1,6 +1,6 @@
 extends layouts/main
 block content
-    .formContainer
+    .form-container
         form(action=routes.login, method="post")
             input(type="email", name="email", placeholder="email", required=true)
             input(type="password", name="password", placeholder="password", required=true)
