--- a/views/mixins/videoBlock.pug
+++ b/views/mixins/videoBlock.pug
@@ -1,7 +1,11 @@
 mixin videoBlock(video={})
     div.videoBlock
         a(href=routes.videoDetail(video.id))
-            video.videoBlock_thumbnail(src=video.videoFile, controls=true)
+            video.videoBlock_thumbnail(src=video.videoFile, controls=false)
             h4.videoBlock_title=video.title
-            h6.videoBlock_views=video.views
-            //우변은 이름을 바꿀 수 있다.
+            if video.views ===1
+                h6.videoBlock_views 1 view
+            else
+                h6.videoBlock_views #{video.views} views
+
+                
