--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,21 +1,22 @@
 header.header
-    div.headerColumn
-        a(href=routes.home)
-            i.fab.fa-youtube
-    div.headerColumn
-        form(action=routes.search, method="get")
-            input(type="text", placeholder="Search now", name="term")
-    div.headerColumn
-        ul
-            if !user.isAuthenticated
-                li
-                    a(href=routes.join) Join
-                li
-                    a(href=routes.login) Log in
-            else
-                li
-                    a(href=`/videos${routes.upload}`) Upload
-                li
-                    a(href=routes.userDetail(user.id)) Profile
-                li
-                    a(href=routes.logout) Log out
+    .header_wrapper
+        div.header_column
+            a(href=routes.home)
+                i.fab.fa-youtube
+        div.header_column
+            form(action=routes.search, method="get")
+                input(type="text", placeholder="Search now", name="term")
+        div.header_column
+            ul
+                if !user.isAuthenticated
+                    li
+                        a(href=routes.join) Join
+                    li
+                        a(href=routes.login) Log in
+                else
+                    li
+                        a(href=`/videos${routes.upload}`) Upload
+                    li
+                        a(href=routes.userDetail(user.id)) Profile
+                    li
+                        a(href=routes.logout) Log out
