--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -1,9 +1,9 @@
-div.socialLogin
-    button.socialLogin_github
+div.social-login
+    button.social-login--github
         span
             <i class="fab fa-github"></i>
         |Continue with Github
-    button.socialLogin_facebook
+    button.social-login--facebook
         span
             <i class="fab fa-facebook"></i>
         |Continue with Facebook
