--- a/views/upload.pug
+++ b/views/upload.pug
@@ -1,9 +1,10 @@
 extends layouts/main
 block content
-    .formContainer
+    .form-container
         form(action=`/videos${routes.upload}`, method="post", enctype="multipart/form-data")
-            label(for="videoFile") Video File
-            input(type="file", id= "videoFile", name="videoFile", required=true, accept="video/*")
+            div.fileUpload    
+                label(for="videoFile") Video File
+                input(type="file", id= "videoFile", name="videoFile", required=true, accept="video/*")
             input(type="text", placeholder="Title", name="title", required=true)
             textarea(name="description", placeholder="Description", required=true)
             input(type="submit", value="Upload video")
