--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -1,17 +1,23 @@
 extends layouts/main
 
 block content
-    .video_player
-        video(src=`/${designatedVideo.fileUrl}`,controls=true)
-    .video_info
-        a(href=routes.editVideo(designatedVideo.id)) Edit Video
-        h5.video_title=designatedVideo.title
-        h7.video_view=designatedVideo.views        
-        p.video_description=designatedVideo.description
-    .video_comments
-        if designatedVideo.comment.length ===0
-            span.video_comments_number No comment
-        else if designatedVideo.comment.length ===1
-            span.video_comments_number 1 comment
-        else
-            span.video_comments_number= `${designatedVideo.comment.length} comments`
+    .video-detail_container
+        .video_player
+            video(src=`/${designatedVideo.fileUrl}`,controls=true)
+        .video_info
+            a(href=routes.editVideo(designatedVideo.id))
+                button Edit Video
+            h5.video_title=designatedVideo.title
+            h7.video_views=designatedVideo.views        
+            p.video_description=designatedVideo.description
+            if designatedVideo.views === 1
+                span.video_views 1 view
+            else
+                span.video_views= `${designatedVideo.views} views`
+        .video_comments
+            if designatedVideo.comment.length ===0
+                span.video_comments_number No comment
+            else if designatedVideo.comment.length ===1
+                span.video_comments_number 1 comment
+            else
+                span.video_comments_number= `${designatedVideo.comment.length} comments`
