--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -1,8 +1,9 @@
 div.social-login
     button.social-login--github
-        span
-            <i class="fab fa-github"></i>
-        |Continue with Github
+        a(href=routes.gitHub)
+            span
+                <i class="fab fa-github"></i>
+            |Continue with Github
     button.social-login--facebook
         span
             <i class="fab fa-facebook"></i>
