--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -5,6 +5,7 @@ div.social-login
                 <i class="fab fa-github"></i>
             |Continue with Github
     button.social-login--facebook
-        span
-            <i class="fab fa-facebook"></i>
-        |Continue with Facebook
+        a(href=routes.facebook)
+            span
+                <i class="fab fa-facebook"></i>
+            |Continue with Facebook
