Kakao&Naver login

--- a/assets/scss/partials/socialLogin.scss
+++ b/assets/scss/partials/socialLogin.scss
@@ -21,8 +21,12 @@
     background-color: $black;
     color: white;
   }
-  .social-login--facebook {
-    background-color: #3a5998;
+  .social-login--kakao {
+    background-color: $yellow;
+    color: black;
+  }
+  .social-login--naver {
+    background-color: $green;
     color: white;
   }
 }
