--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -4,8 +4,13 @@ div.social-login
             span
                 <i class="fab fa-github"></i>
             |Continue with Github
-    button.social-login--facebook
-        a(href=routes.facebook)
+    button.social-login--kakao
+        a(href=routes.kakao)
             span
-                <i class="fab fa-facebook"></i>
-            |Continue with Facebook
+                img(src="https://image.flaticon.com/icons/svg/2111/2111466.svg", width= "20", height= "20", alt="No image")
+            |Continue with Kakaotalk
+    button.social-login--naver
+        a(href=routes.naver)
+            span
+                img(src="https://lh3.googleusercontent.com/Kbu0747Cx3rpzHcSbtM1zDriGFG74zVbtkPmVnOKpmLCS59l7IuKD5M3MKbaq_nEaZM", width= "20", height="20", alt="No image")
+            |Continue with Naver
