--- a/assets/scss/pages/videoDetail.scss
+++ b/assets/scss/pages/videoDetail.scss
@@ -10,6 +10,12 @@
       width: 100px;
       margin-bottom: 25px;
     }
+    .video_author {
+      a {
+        color: #2980b9;
+        font-weight: bold;
+      }
+    }
     .video_title,
     .video_views,
     .video_description {
