--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,3 +9,6 @@
 @import "partials/videoBlock.scss";
 @import "pages/home.scss";
 @import "pages/videoDetail.scss";
+@import "pages/userProfile.scss";
+@import "config/utils.scss";
+@import "partials/videoPlayer.scss";
