--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -1,12 +1,10 @@
 extends layouts/main
 block content
     .form-container
-        form(action=`/users${routes.editProfile}`, method="post")
+        form(action=`/users${routes.editProfile}`, method="post", enctype="multipart/form-data")
             .fileUpload
                 label(for="avatar") Avatar
-                input(type="file", id="avatar", name="avatar")
-            input(type="text", placeholder="name", name="name")
-            input(type="email", placeholder="email", name="email")
+                input(type="file", id="avatar", name="avatar", , accept="image/*")
+            input(type="text", placeholder="name", name="name", value=loggedUser.name)
             input(type="submit", value="Update Profile")
-        a.formContainerLink(href=`/users${routes.changePassword}`)
-            button Change Password
+        
