--- a/views/home.pug
+++ b/views/home.pug
@@ -5,7 +5,7 @@ block content
     div.home-videos
         each item in videoFiles
             +videoBlock({
-                id: item.id,
+                id: item._id,
                 videoFile:item.fileUrl,
                 title:item.title,
                 views:item.views
