--- a/views/mixins/videoBlock.pug
+++ b/views/mixins/videoBlock.pug
@@ -1,7 +1,7 @@
 mixin videoBlock(video={})
     div.videoBlock
         a(href=routes.videoDetail(video.id))
-            video.videoBlock_thumbnail(src=video.videoFile, controls=false)
+            video.videoBlock_thumbnail(src=`/${video.videoFile}`, controls=false)
             h4.videoBlock_title=video.title
             if video.views ===1
                 h6.videoBlock_views 1 view
