--- a/views/userDetail.pug
+++ b/views/userDetail.pug
@@ -1,6 +1,22 @@
 extends layouts/main
+include mixins/videoBlock
+
 block content
     .user-profile
         .user-profile__header
-            img.avatar(src=user.avatarUrl)
+            img.u-avatar(src=`/${user.avatarUrl}`)
             h4.profile__username=user.name
+        if user.id
+            .user-profile__btns
+                a(href=`/users${routes.editProfile}`)
+                    button ✏️ Edit Profile
+                a(href=`/users${routes.changePassword}`)
+                    button 🔒 Change Password
+    div.home-videos
+        each item in user.videos
+            +videoBlock({
+                id: item._id,   
+                videoFile:item.fileUrl,
+                title:item.title,
+                views:item.views
+            })
