--- a/assets/scss/partials/videoPlayer.scss
+++ b/assets/scss/partials/videoPlayer.scss
@@ -26,19 +26,40 @@
     .videoPlayer__column:first-child {
       display: flex;
       align-items: center;
-      span:first-child {
+      #jsVolumeButton {
         margin-right: 10px;
       }
     }
-    .videoPlayer__column:last-child {
-      justify-self: end;
+  }
+
+  .videoPlayer__column__subclass {
+    &:hover {
+      .videoPlayer__volume {
+        opacity: 1;
+      }
     }
-    .videoPlayer__column:nth-child(2) {
-      justify-self: center;
-    }
-    i {
-      font-size: 25px;
-      cursor: pointer;
-    }
+  }
+  // 직접 만들었다.
+
+  .videoPlayer__volume {
+    position: absolute;
+    padding: 0;
+    opacity: 0;
+    top: -60px;
+    left: -25px;
+    transform: rotate(-90deg);
+    z-index: 10;
+    width: 80px;
+  }
+
+  .videoPlayer__column:last-child {
+    justify-self: end;
+  }
+  .videoPlayer__column:nth-child(2) {
+    justify-self: center;
+  }
+  i {
+    font-size: 25px;
+    cursor: pointer;
   }
 }
