--- a/views/mixins/videoPlayer.pug
+++ b/views/mixins/videoPlayer.pug
@@ -3,10 +3,14 @@ mixin videoPlayer(video={})
         video(src=video.src)
         .videoPlayer__controls
             .videoPlayer__column
-                span#jsVolumeButton
-                    i.fas.fa-volume-up
+                .videoPlayer__column__subclass
+                    span#jsVolumeButton
+                        i.fas.fa-volume-up
+                    input.videoPlayer__volume#jsVolume(type="range", min="0",max="1", step="0.1", value="0.7")
                 span
-                    |00:00 / 10:00
+                    span#currentTime 00:00:00
+                    |/
+                    span#totalTime 00:00:00
             .videoPlayer__column
                 span#jsPlayButton
                     i.fas.fa-play
