--- a/views/mixins/videoPlayer.pug
+++ b/views/mixins/videoPlayer.pug
@@ -14,6 +14,8 @@ mixin videoPlayer(video={})
             .videoPlayer__column
                 span#jsPlayButton
                     i.fas.fa-play
+                div.jsPlayerBoxOutside
+                    div.jsPlayerBoxInside
             .videoPlayer__column
                 span#jsFullScreen
                     i.fas.fa-expand
