--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -12,3 +12,4 @@
 @import "pages/userProfile.scss";
 @import "config/utils.scss";
 @import "partials/videoPlayer.scss";
+@import "partials/videoRecorder.scss";
