--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -13,3 +13,4 @@
 @import "config/utils.scss";
 @import "partials/videoPlayer.scss";
 @import "partials/videoRecorder.scss";
+@import "partials/messages.scss";
